k8s/output.yaml
---
# Source: jerney/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jerney
---
# Source: jerney/templates/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: jerney-backend
  namespace: jerney

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: jerney-backend

  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
# Source: jerney/templates/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: jerney-frontend
  namespace: jerney

spec:
  type: NodePort

  selector:
    app.kubernetes.io/name: jerney-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# Source: jerney/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jerney-db
  namespace: jerney

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: jerney-db

  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
# Source: jerney/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jerney-backend
  namespace: jerney

spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend

    spec:
      automountServiceAccountToken: false

      containers:
        - name: backend

          image: rohith4693/jerney-backend:v1

          ports:
            - containerPort: 5000
              protocol: TCP
---
# Source: jerney/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jerney-frontend
  namespace: jerney

spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend

    spec:
      automountServiceAccountToken: false

      containers:
        - name: frontend

          image: rohith4693/jerney-frontend:v1

          ports:
            - containerPort: 80
              protocol: TCP
---
# Source: jerney/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jerney-db
  namespace: jerney

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-db

    spec:
      automountServiceAccountToken: false

      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432
              protocol: TCP

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata

      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: jerney-db-pvc
---
# Source: jerney/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jerney-ingress
  namespace: jerney

spec:
  ingressClassName: nginx

  rules:
    - host: jerney.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: jerney-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: jerney-backend
                port:
                  number: 5000
